--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
 		"noUnusedLocals": true,
 		"noImplicitReturns": false,
 		"skipLibCheck": true,
-		"baseUrl": "./packages"
+		"baseUrl": "./packages",
+		"paths": {
+			"hostConfig": ["./react-reconciler/src/hostConfig.ts"]
+		}
 	}
 }
